# simple-redis-admin

./: Cargo.toml  Dockerfile  README.md  cargo_config  docker-compose.yml  docker-entrypoint.sh
src/: common.rs  controller.rs  error.rs  main.rs  router.rs
static/: opt.js  style.css
templates/: error.html  index.html
